--- a/Music-Player-App/package.json
+++ b/Music-Player-App/package.json
@@ -13,12 +13,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@testing-library/react": "^16.1.0",
+    "axios": "^1.7.9",
+    "firebase": "^11.1.0",
+    "framer-motion": "^11.17.0",
     "howler": "^2.2.4",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "npm": "^11.0.0",
+    "rc-slider": "^11.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "react-responsive": "^10.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -31,5 +39,10 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
