--- a/Music-Player-App/package.json
+++ b/Music-Player-App/package.json
@@ -15,13 +15,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
-    "@testing-library/react": "^16.1.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "framer-motion": "^11.17.0",
     "howler": "^2.2.4",
     "install": "^0.13.0",
-    "jest": "^29.7.0",
     "npm": "^11.0.0",
     "rc-slider": "^11.1.8",
     "react": "^18.3.1",
@@ -40,6 +38,8 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "prop-types": "^15.8.1",
     "storybook": "^8.4.7",
