--- a/Music-Player-App/package.json
+++ b/Music-Player-App/package.json
@@ -4,8 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://<Moeakae>.github.io/<CapStone-Project>",
-
-
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -56,6 +54,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.2",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
