--- a/Music-Player-App/package.json
+++ b/Music-Player-App/package.json
@@ -3,8 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://<Moeakae>.github.io/<CapStone-Project>"
-}
+  
+  "homepage": "https://Moeakae.github.io/CapStone-Project",
+
+
+
+
    "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -15,7 +19,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
-  }
+  },
+  
 
   "dependencies": {
     "@emotion/react": "^11.14.0",
