--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,14 @@ dist-ssr
 
 *storybook.log
 
+# Build output
+dist/
+
 # Environment variables
 .env
+.env.local
+.env.*.local
+
+# Miscellaneous
+coverage/
+*.log
