--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "homepage": "https://Moeakae.github.io/CapStone-Project",
-
-
-
-
-   "scripts": {
+  "scripts": {
+    "start": "node your-script.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "jest",
@@ -20,13 +16,12 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  
-
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "express": "^4.21.2",
     "firebase": "^11.1.0",
     "framer-motion": "^11.17.0",
     "howler": "^2.2.4",
